--- a/demo.css
+++ b/demo.css
@@ -8,16 +8,15 @@ body {
   font-family: 'PT Sans', sans-serif;
   width: 100%;
   height: 100%;
-  background-color: #18181b;
+  background-color: #1d1d22;
 }
 
 form {
   width: 40%;
   margin: 15px auto;
-  padding: 35px;
+  padding: 15px 35px;
   color: #fdfeff;
-  background-color: #363842;
-  background-image: url(bg1.png);
+  background-color: #18181b;
   border: 1px solid #c6c6c6;
   border-radius: 5px;
   box-shadow: 0 0 8px#999999;
@@ -28,31 +27,12 @@ form h1 {
   font-size: 3em;
   font-weight: 300;
   text-align: center;
-  /*color: #2196f3;*/
-  color: #01b075;
+  color: #20a0eb;
   padding-top: 0;
   margin-top: 0;
 }
 
-form hr.sep {
-  /*background: #2196f3;*/
-  background-color: #01b075;
-  box-shadow: none;
-  border: none;
-  height: 2px;
-  width: 25%;
-  margin: 0px auto 45px auto;
-}
-
-
-/*
-form .emoji {
-  font-size: 1.2em;
-}
-*/
-
 input,
-textarea,
 select {
   border: 1px solid #c6c6c6;
   border-radius: 5px;
@@ -63,16 +43,11 @@ select {
 
 .group {
   position: relative;
-  margin: 45px 0;
+  margin: 40px 0;
   box-sizing: border-box;
 }
 
-.group textarea {
-  resize: none;
-}
-
 .group input,
-.group textarea,
 .group select {
   background: none;
   color: #c6c6c6;
@@ -90,31 +65,23 @@ select {
 }
 
 .group input:focus,
-.group textarea:focus,
 .group select:focus {
   outline: none;
 }
 
 .group input:focus~label,
-.group textarea:focus~label,
 .group select:focus~label,
 .group input:valid~label,
-.group textarea:valid~label,
 .group select:valid~label {
   top: -14px;
   font-size: 12px;
-  /*color: #2196f3;*/
-  color: #04c484;
+  color: #2196f3;
+  /*color: #04c484;*/
 }
 
 .group input:focus~.bar:before,
-.group textarea:focus~.bar:before,
 .group select:focus~.bar:before {
   width: 100%;
-}
-
-.group input[type="password"] {
-  letter-spacing: 0.3em;
 }
 
 .group label {
@@ -139,8 +106,8 @@ select {
   width: 0;
   bottom: 0px;
   position: absolute;
-  /*background: #2196f3;*/
-  background-color: #04c484;
+  background-color: #2196f3;
+  /*background-color: #04c484;*/
   transition: 300ms ease all;
   left: 0%;
 }
@@ -159,37 +126,25 @@ select {
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.btn:hover {
-  color: #8b8b8b;
-  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
-}
-
-.btn.btn-link {
-  background: #2196f3;
-  color: #d3eafd;
-}
-
-.btn.btn-link:hover {
-  background: #0d8aee;
-  color: #deeffd;
+.btn-box {
+  text-align: center;
+  margin: 20px 10px;
 }
 
 .btn.btn-submit {
   cursor: pointer;
-  background-color: #01b075;
-  color: #fff;
-}
-
-.btn.btn-submit:hover {
-  /*background: #0d8aee;*/
-  background-color: #04c484;
+  background-color: #2196f3;
   color: #deeffd;
 }
 
+.btn.btn-submit:hover {
+  background-color: #0d8bf1;
+  color: #fff;
+}
+
 .btn.btn-submit:active {
-  background-color: #13e29d;
-  color: rgb(80, 77, 77);
-  /*color: #0d8aee;*/
+  background-color: #2196f3;
+  color: #061e31;
 }
 
 .btn.btn-cancel {
@@ -199,9 +154,4 @@ select {
 .btn.btn-cancel:hover {
   background: #e1e1e1;
   color: #8b8b8b;
-}
-
-.btn-box {
-  text-align: center;
-  margin: 20px 10px;
 }
