--- a/notification.css
+++ b/notification.css
@@ -6,6 +6,8 @@
   font-size: 1.1em;
   box-sizing: border-box;
   z-index: 1000;
+  overflow: hidden;
+  transition: all .5s linear;
 }
 
 .notification-container.center {
@@ -37,16 +39,18 @@
 .notification {
   position: relative;
   overflow: hidden;
+  max-height: 500px;
+  transition-property: all;
+  transition-duration: .5s;
+  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   margin: 0 0 6px;
   opacity: 0.9;
   border-radius: 4px;
   box-shadow: 0 0 30px 0 rgba(36, 30, 30, 0.2);
-  min-height: 56px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  transition: all .5s linear;
 }
 
 .notification:hover {
@@ -115,9 +119,10 @@
   align-items: center;
   display: flex;
   min-height: 56px;
-  width: 270px;
+  width: 290px;
   padding: 10px;
   letter-spacing: 1px;
+  word-break: break-word !important;
 }
 
 .notification-icon {
@@ -134,7 +139,7 @@
 }
 
 .notification-default .notification-icon {
-  color: darkred;
+  color: #ffc107;
 }
 
 .notification-default .notification-icon::before {
@@ -175,7 +180,7 @@
 
 .notification:not(.notification-default) .notification-desc {
   padding: 4px;
-  color: rgba(255, 255, 255, 0.9)
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .notification-default .notification-desc {
@@ -185,32 +190,28 @@
 
 .bottom-right .notification.animation-slide-in,
 .top-right .notification.animation-slide-in {
-  animation: right-slide-in .5s forwards, bounceIn .5s forwards;
+  animation: right-slide-in .5s forwards, bounceIn .7s forwards;
   transform: translateX(100%);
 }
 
 .bottom-right .notification.animation-slide-out,
 .top-right .notification.animation-slide-out {
-  animation: right-slide-out .2s forwards;
-  margin-right: -20px;
-  transform: translateX(0);
+  animation: right-slide-out .5s forwards;
 }
 
 .top-left .notification.animation-slide-in,
 .bottom-left .notification.animation-slide-in {
-  animation: left-slide-in .5s forwards, bounceIn .5s forwards;
+  animation: left-slide-in .5s forwards, bounceIn .7s forwards;
   transform: translateX(-100%);
 }
 
 .top-left .notification.animation-slide-out,
 .bottom-left .notification.animation-slide-out {
-  animation: left-slide-out .2s forwards;
-  margin-left: -20px;
-  transform: translateX(0);
+  animation: left-slide-out .5s forwards;
 }
 
 .notification.animation-fade-in {
-  animation: fade-in .5s forwards, bounceIn .5s forwards;
+  animation: fade-in .5s forwards, bounceIn .7s forwards;
   opacity: 0;
 }
 
@@ -278,6 +279,12 @@
 @keyframes left-slide-out {
   to {
     transform: translateX(-100%);
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    max-height: 0;
+    opacity: 0;
   }
 }
 
@@ -290,6 +297,12 @@
 @keyframes right-slide-out {
   to {
     transform: translateX(100%);
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    max-height: 0;
+    opacity: 0;
   }
 }
 
@@ -299,7 +312,7 @@
     opacity: 0.5;
   }
   75% {
-    transform: scale(1.2);
+    transform: scale(1.1);
     opacity: 0.9;
   }
   100% {
@@ -316,6 +329,12 @@
 
 @keyframes fade-out {
   to {
+    opacity: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    max-height: 0;
     opacity: 0;
   }
 }
