--- a/demo.css
+++ b/demo.css
@@ -5,31 +5,65 @@ body {
 }
 
 body {
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   width: 100%;
   height: 100%;
   background-color: #1d1d22;
 }
 
-form {
-  width: 40%;
-  margin: 15px auto;
-  padding: 15px 35px;
-  color: #fdfeff;
-  background-color: #18181b;
+.container-form {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  width: 70%;
+  margin: 25px auto;
+  display: flex;
+  background-color: #0d1117;
   border: 1px solid #c6c6c6;
   border-radius: 5px;
   box-shadow: 0 0 8px#999999;
+}
+
+form {
+  width: 50%;
+  min-width: 200px;
+  padding: 15px 35px;
+  color: #fdfeff;
   box-sizing: border-box;
+  justify-content: center;
+  flex-grow: 1;
 }
 
 form h1 {
   font-size: 3em;
   font-weight: 300;
   text-align: center;
-  color: #20a0eb;
+  /*color: #2196f3;*/
+  color: #2196f3;
   padding-top: 0;
   margin-top: 0;
+}
+
+.code {
+  position: relative;
+  overflow: auto;
+  width: 50%;
+  color: #f8f8f2;
+  font-size: 1.2em;
+  border-left: 1px solid #c6c6c6;
+  box-shadow: 0 0 8px#999999;
+  justify-content: left;
+  flex-grow: 1;
+  display: flex;
+  align-items: left;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+pre {
+  margin: 0 !important;
+  padding: 0 !important;
+  white-space: pre;
 }
 
 input,
@@ -43,7 +77,7 @@ select {
 
 .group {
   position: relative;
-  margin: 40px 0;
+  margin: 50px 0;
   box-sizing: border-box;
 }
 
@@ -114,8 +148,9 @@ select {
 
 .btn {
   background: #fff;
+  background-position: center;
   color: #959595;
-  border: none;
+  border: 0;
   padding: 10px 20px;
   font-size: 1.1em;
   border-radius: 3px;
@@ -123,7 +158,8 @@ select {
   text-decoration: none;
   outline: none;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: background 400ms;
+  /*transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);*/
 }
 
 .btn-box {
@@ -131,27 +167,42 @@ select {
   margin: 20px 10px;
 }
 
-.btn.btn-submit {
+.btn {
   cursor: pointer;
   background-color: #2196f3;
   color: #deeffd;
 }
 
-.btn.btn-submit:hover {
-  background-color: #0d8bf1;
+.btn:hover {
+  background: #0875ce;
   color: #fff;
 }
 
-.btn.btn-submit:active {
-  background-color: #2196f3;
-  color: #061e31;
+.ripple {
+  position: relative;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
 }
 
-.btn.btn-cancel {
-  background: #eee;
+.ripple:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(circle, #fff 10%, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  transform: scale(10, 10);
+  opacity: 0;
+  transition: transform .5s, opacity 1s;
 }
 
-.btn.btn-cancel:hover {
-  background: #e1e1e1;
-  color: #8b8b8b;
+.ripple:active:after {
+  transform: scale(0, 0);
+  opacity: .3;
+  transition: 0s;
 }
